{
    "name": "InputActions",
    "maps": [
        {
            "name": "BasicActionMap",
            "id": "bb208a0a-d0b6-443f-9818-c635678a52fd",
            "actions": [
                {
                    "name": "MoveCommand",
                    "type": "Button",
                    "id": "13001b7b-5c80-4b59-8e3c-3012097923d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseAbility",
                    "type": "Button",
                    "id": "f2204b65-75d8-4f05-86f4-638b90593d1f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseSpecial1",
                    "type": "Button",
                    "id": "8194b5db-1e2b-411d-96c0-8c1f9d4c88d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseSpecial2",
                    "type": "Button",
                    "id": "677ada54-477b-4260-9594-a8990f28718d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TargetPosition",
                    "type": "Value",
                    "id": "b1608ea5-80b3-4087-af4d-199d488ecb80",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "69aa9461-9e5e-4f6b-8faf-2ca172e109ef",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "MoveCommand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd70ea98-8f8d-43cf-bfa2-28cd30e4a10a",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "UseAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90aa6400-cb96-43d7-8d57-4eabcf405c17",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "UseSpecial1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ca357c1-b379-4910-b4db-3488d53e8694",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "UseSpecial2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba03990e-f999-4d6a-9a32-db9daadc2912",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "TargetPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KBM",
            "bindingGroup": "KBM",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}